--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 @import "modules/font";
 @import "modules/footer";
 @import "modules/header";
+@import "modules/nav";
 @import "modules/panel";
 @import "modules/scene";
 @import "modules/shop";
