--- a/src/scss/modules/_header.scss
+++ b/src/scss/modules/_header.scss
@@ -2,7 +2,7 @@
   max-height: 100vh;
   max-width: 100%;
   position: absolute;
-  top: 0;
+  top: -30;
 }
 
 .header-content {
@@ -17,7 +17,7 @@
 
 .header-logo {
   width: 80svw;
-  margin-top: 80px;
+  margin-top: 8vh;
   display: flex;
   justify-content: center;
 }
