--- a/src/scss/modules/_nav.scss
+++ b/src/scss/modules/_nav.scss
@@ -5,3 +5,10 @@
   gap: 48px;
   margin-bottom: 56px;
 }
+
+.nav-shop {
+  display: flex;
+  align-items: center;
+  gap: 32px;
+  flex-shrink: 0;
+}
