--- a/src/scss/modules/_footer.scss
+++ b/src/scss/modules/_footer.scss
@@ -1,4 +1,67 @@
 .footer {
   background: var(--black, #000);
   box-shadow: 0px -2px 4px 0px rgba(0, 0, 0, 0.25);
+  display: flex;
+  padding: 40px 32px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 56px;
+}
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  align-self: stretch;
+}
+
+.footer-dargaud {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 16px;
+}
+
+.footer-logo-dargaud {
+  height: 32px;
+  align-self: stretch;
+}
+
+.footer-newsletter {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+}
+
+.footer-newsletter-subscribe {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  align-self: stretch;
+}
+
+.footer-newsletter-label {
+  display: flex;
+  width: 240px;
+  height: 32px;
+  padding: 0px 16px;
+  align-items: center;
+  gap: 8px;
+  border-radius: 80px;
+  background: var(--White, #fff);
+}
+
+.footer-legal {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.footer-copyright {
+  color: var(--grey, #c9c8c8);
+  text-align: center;
+  align-self: stretch;
 }
