--- a/src/scss/modules/_shop.scss
+++ b/src/scss/modules/_shop.scss
@@ -5,12 +5,11 @@
 
 .shop {
   position: absolute;
+  inset: 0;
   display: flex;
-  height: 100vh;
-  width: 100%;
+  justify-content: space-between;
   align-items: center;
-  padding: 0 2%;
-  gap: 12%;
+  padding: 0 5% 0 2%;
 }
 
 .shop-mockup {
